--- a/main.html
+++ b/main.html
@@ -9,9 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
  <nav>
-		 <a href="www.google.com">Home</a>
-	 	 <a href="www.google.com">About us</a>
-	 	 <a href="www.google.com">Contact us</a>
+	 <ul>
+		 <a href="https://www.w3schools.com/tags/att_audio_controls.asp">Home</a>
+	 	 <a href="https://www.w3schools.com/tags/att_audio_controls.asp">About us</a>
+	 	 <a href="https://www.w3schools.com/tags/att_audio_controls.asp">Contact us</a> 
+	 </ul>
+		
  </nav>
 	<audio controls>
 		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
